# llm-chat-agent

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  create_test_excel.py  docker-compose.yml  init.sql  main.py  nginx.conf  pyproject.toml  sample.env  test_20.xlsx
apps/api/: main.py  schemas.py
docs/: Grafana_IDP_Client_등록가이드.md  IDP_설정가이드.md  P00_설계서.md  P00_요구사항.md  P01_설계서.md  P01_요구사항.md  P01_테스트결과서.md  P02_설계서.md  P02_요구사항.md  P02_테스트결과서.md  P03_설계서.md  P03_요구사항.md  P04.1_설계서.md  P04.2_설계서.md  P04.2_요구사항.md  P04.2_테스트결과서_RAG_API_안정성_및_로깅_강화.md  P04_설계서.md  P04_요구사항.md  P04_테스트결과서.md  P05.1_설계서.md  P05.1_요구사항.md  P05.1_테스트결과서.md  P05_설계서.md  P05_요구사항.md  P05_테스트결과서.md  P06_설계서.md  P06_설계서_RAG_API_안정성_및_로깅_강화.md  P06_설계서_채팅컨텍스트제한해제.md  P06_요구사항.md  P06_테스트결과서_채팅컨텍스트제한해제.md  P07_vllm_tool_calling_검증.md  P07_설계서.md  P07_설계서_채팅쓰레드관리및로깅개선.md  P07_요구사항.md  구현계획.md  권한관리설계서.md  배포가이드.md  운영이관_가이드.md
qdrant_data/: raft_state.json
ref/: CLAUDE.md  HOWTO_008_oidc_client_integration_guide.md
scratch/: check_api.py  check_qdrant.py  init_db.py  inspect_qdrant_issue.py  test_chat_limit.py
tests/: test_api_chat.py  test_api_config.py  test_api_prompts.py  test_auth.py  test_bulk_ops.py  test_bulk_upload.py  test_llm.py  test_log_enrichment.py  test_memory.py  test_prompt_repository.py  test_prompt_service.py  test_rag_v4_logic.py  test_repository.py  test_service.py  test_toollab_codegen.py  test_toollab_integration.py  test_toollab_leak_detector.py  test_toollab_registry.py  test_toollab_runner.py  test_toollab_sandbox.py  test_toollab_serializer.py
(+59 files in other folders)
